2010-09-16  Shujing Zhao  <pearly.zhao@oracle.com>

	* include/mutex.h, libdtrace, libproc, librtld: Fix the mutex
	problems.
	* libport/proc_name.c, libport/strlcat.c: Added.
	* include/port.h, uts/common/sys/mnttab.h, include/sys/bitmap.h,
	include/sys/elftypes.h: Added.

2010-09-13  Shujing Zhao  <pearly.zhao@oracle.com>

	* librtld: Added.
	* libdtrace (dt_lex.l, makefile): Fixed.
	* include/types_various.h: Define ino64_t and PS_OBJ_LDSO.

2010-09-10  Shujing Zhao  <pearly.zhao@oracle.com>

	* libport: Add compat functions support at libport.
	* libdtrace/makefile: Handle the dt_lex.l and add it to the lib.
	* libdtrace/dt_impl.h: Define different yytext at Linux.

2010-09-08  Shujing Zhao  <pearly.zhao@oracle.com>

	* Define __USE_ATFILE before include <fcntl.h> when use AT_*
	constants.
	* Add makefile for libproc and libdtrace.
	* Adjust the header files.

2010-09-07  Shujing Zhao  <pearly.zhao@oracle.com>

	* Adjust the header files at directory include to make the files of
	libproc	can be compiled. Move some modified headers from uts to
	include. Fix the source files at libproc.

2010-08-31  Shujing Zhao  <pearly.zhao@oracle.com>

	* Strip the Solaris header files dependency from the sources files.
	Add the fix includes at the directory include. Fix the compile
	options.